[package]
name = "free"
license = "GPL-3.0-only"
description = "Show free disk space on Windows"
version = "0.2.2"
authors = ["Ytrog <hisbrucker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.16.4"
