[package]
name = "dfree"
license = "GPL-3.0-only"
description = "Show free disk space on Windows"
repository = "https://github.com/Ytrog/free"
readme = "README.md"
version = "0.2.3"
authors = ["Ytrog <hisbrucker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.17.4"
